third_party/move/move-compiler/tests/move_check/parser/num_hex_literal_underscore_trailing.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/num_hex_literal_underscore_trailing.move:4:22
  │
4 │         let _ = 0x0u8_;
  │                      ^
  │                      │
  │                      Unexpected '_'
  │                      Expected ';'

